--- a/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/views/products.html
+++ b/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/views/products.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="../styles/style.min.css">
   </head>
   <body>
-
-    <div id="app">
+    <style>
+        [v-cloak]{
+            display: none;
+        }
+    </style>
+    <div id="app" v-cloak>
 
       <header class="top-bar spread">
         <nav class="top-bar-nav">
@@ -21,9 +25,9 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <a @click="toggleSideBar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span>Cart ({{totalQuantity}})</span>
         </a>
       </header>
 
@@ -31,19 +35,19 @@
         <h1>Products</h1>
 
         <div class="card-container">
-          <div class="card">
+          <div v-for="(product,i) in inventory" :key="product.id" class="card">
             <div class="card-title">
-              Carrots
+              {{product.name}}
             </div>
             <div class="card-body">
-              <i class="icofont-10x icofont-carrot"></i>
+              <i class="icofont-10x icofont-{{product.icon}}"></i>
               <form>
                 <div class="row">
                   <div class="cell">
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{product.type}}</em>
                   </div>
                 </div>
                 <div class="row">
@@ -51,7 +55,7 @@
                     <label>Price:</label>
                   </div>
                   <div class="cell">
-                    $4.82
+                    ${{product.price.USD}}
                   </div>
                 </div>
                 <div class="row">
@@ -59,17 +63,19 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" value="0">
+                    <input type="number" v-model="product.quantity" min="1" pattern="[1-9]+">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
+              <button @click="addToCart(product.name,i)" class="btn btn-light">
+                Add to cart
+              </button>
             </div>
           </div>
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Pineapples
             </div>
@@ -105,9 +111,9 @@
             <div class="card-footer">
               <button class="btn btn-light">Add to cart</button>
             </div>
-          </div>
+          </div> -->
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Cherries
             </div>
@@ -143,9 +149,9 @@
             <div class="card-footer">
               <button class="btn btn-light">Add to cart</button>
             </div>
-          </div>
+          </div> -->
         
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Carrots
             </div>
@@ -181,9 +187,9 @@
             <div class="card-footer">
               <button class="btn btn-light">Add to cart</button>
             </div>
-          </div>
+          </div> -->
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Pineapples
             </div>
@@ -219,9 +225,9 @@
             <div class="card-footer">
               <button class="btn btn-light">Add to cart</button>
             </div>
-          </div>
+          </div> -->
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Cherries
             </div>
@@ -257,9 +263,14 @@
             <div class="card-footer">
               <button class="btn btn-light">Add to cart</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </main>
+      <sidebar v-if="showSideBar" 
+      :toggle="toggleSideBar" 
+      :cart="cart"
+      :inventory="inventory"
+      :remove="remove"/>
 
       <!-- <aside class="cart-container">
         <div class="cart">
@@ -311,4 +322,6 @@
     </div>
 
   </body>
+  <script src="https://unpkg.com/vue@next"></script>
+  <script src="../js/app.js"></script>
 </html>
